Updated Url Encoding